# AREA

./: .gitignore  AREA_Backend_API.postman_collection.json  CLAUDE.md  Jenkinsfile  NOTICE.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  docker-compose.yml  snug-munching-ritchie-agent-a7ea88f.md  sonar-project.properties  subject.md
docs/: AREA_Backend_API.postman_collection.json  AREA_Backend_API.postman_environment.json  DEVELOPER_GUIDE.md  FRONTEND_MIGRATION_PLAN.md  GMAIL_DISCORD_ARCHITECTURE.md  GMAIL_DISCORD_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN.md  MOBILE.md  MOBILE_REFACTOR.md  OVERVIEW.md  PHASE1_CHANGES_SUMMARY.md  POSTMAN_TESTING_GUIDE.md  QUICKSTART.md  QUICK_START.md  SERVER.md  STACK_COMPARISON.md  SYSTEM_DIAGRAM.md  SYSTEM_DIAGRAM.txt  TESTING_CHECKLIST_PHASE1.md  TEST_ENDPOINTS_API.md  TIMER_SERVICE_QUICK_REFERENCE.md  WEB.md  api-response-format.md  architecture-decisions.md  exception-handling.md  service-integration-guide.md  ui-components.md
docs/services/: GITHUB_API_SETUP.md  GMAIL_API_SETUP.md
mobile/: Dockerfile  Dockerfile.apk-builder  Jenkinsfile  README.md  SETUP.md  pubspec.yaml  sonar-project.properties
scripts/: build-desktop.sh
server/: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  jenkinsfile  pom.xml
web/: AUTHENTICATION.md  Dockerfile  Jenkinsfile  README.md  index.html  nginx.conf  package.json  sonar-project.properties  vite.config.js
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
(+266 files in other folders)
