[package]
name = "area-desktop"
version = "0.1.0"
description = "AREA desktop shell (Tauri)"
authors = ["AREA"]
license = "MIT"
repository = "https://github.com/Aincrad-Flux/AREA"
edition = "2021"

[lib]
name = "area_desktop"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
